--- a/versions.properties
+++ b/versions.properties
@@ -6,6 +6,7 @@
 ####
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
+
 ## unused
 plugin.android=7.3.0
 plugin.com.google.dagger.hilt.android=2.44
@@ -62,7 +63,9 @@ version.androidx.core=1.9.0
 version.androidx.compose.ui=1.3.0
 ##              # available=1.4.0-alpha01
 version.androidx.compose.material=1.3.0
-##                    # available=1.4.0-alpha01
+## unused
+version.androidx.compose.material3=1.0.0
+##                     # available=1.4.0-alpha01
 version.androidx.compose.compiler=1.3.2
 version.androidx.compose.animation=1.3.0
 ##                     # available=1.4.0-alpha01
