--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 benManes-versions = "0.51.0"
 kotlin = "2.0.0"
 hilt = "2.51.1"
-agp = "8.4.1"
+agp = "8.4.2"
 androidx-test-ext-junit = "1.1.5"
 androidx-test-espresso = "3.4.1"
 kotlinx-coroutines = "1.8.1"
@@ -17,7 +17,7 @@ composeBom = "2024.05.00"
 androidx-paging-compose = "1.0.0-alpha17"
 androidx-lifecycle-viewmodel-compose = "2.8.1"
 androidx-navigation = "2.7.7"
-apollo = "4.0.0-beta.7"
+apollo = "4.0.0-rc.1"
 jakewharton-timber = "5.0.1"
 androidx-hilt-navigation-compose = "1.2.0"
 junit-junit = "4.13.2"
@@ -30,7 +30,7 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
-apollo = { id = "com.apollographql.apollo3", version.ref = "apollo" }
+apollo = { id = "com.apollographql.apollo", version.ref = "apollo" }
 
 [libraries]
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
@@ -53,8 +53,8 @@ androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-toolin
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-viewmodel-compose" }
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "androidx-paging-compose" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-navigation" }
-apollo-runtime = { group = "com.apollographql.apollo3", name = "apollo-runtime", version.ref = "apollo" }
-apollo-normalized-cache-sqlite = { group = "com.apollographql.apollo3", name = "apollo-normalized-cache-sqlite", version.ref = "apollo" }
+apollo-runtime = { group = "com.apollographql.apollo", name = "apollo-runtime", version.ref = "apollo" }
+apollo-normalized-cache-sqlite = { group = "com.apollographql.apollo", name = "apollo-normalized-cache-sqlite", version.ref = "apollo" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "jakewharton-timber" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
