--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ kotlin = "2.0.0"
 hilt = "2.51.1"
 agp = "8.4.2"
 androidx-test-ext-junit = "1.1.5"
-androidx-test-espresso = "3.4.1"
+androidx-test-espresso = "3.6.1"
 kotlinx-coroutines = "1.8.1"
 androidx-appcompat = "1.7.0"
 androidx-core = "1.13.1"
@@ -14,10 +14,11 @@ androidx-paging = "3.3.0"
 androidx-activity = "1.9.0"
 # See https://developer.android.com/jetpack/compose/bom/bom-mapping
 composeBom = "2024.05.00"
-androidx-paging-compose = "1.0.0-alpha17"
+androidx-paging-compose = "3.3.0"
 androidx-lifecycle-viewmodel-compose = "2.8.1"
 androidx-navigation = "2.7.7"
 apollo = "4.0.0-rc.1"
+apollo-incubating-cache = "0.0.3-SNAPSHOT"
 jakewharton-timber = "5.0.1"
 androidx-hilt-navigation-compose = "1.2.0"
 junit-junit = "4.13.2"
@@ -36,6 +37,7 @@ apollo = { id = "com.apollographql.apollo", version.ref = "apollo" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-test-espresso" }
+kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "kotlin" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
@@ -54,7 +56,7 @@ lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "androidx-paging-compose" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-navigation" }
 apollo-runtime = { group = "com.apollographql.apollo", name = "apollo-runtime", version.ref = "apollo" }
-apollo-normalized-cache-sqlite = { group = "com.apollographql.apollo", name = "apollo-normalized-cache-sqlite", version.ref = "apollo" }
+apollo-normalized-cache-sqlite = { group = "com.apollographql.cache", name = "normalized-cache-sqlite-incubating", version.ref = "apollo-incubating-cache" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "jakewharton-timber" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
